--- a/.github/workflows/ci-new.yml
+++ b/.github/workflows/ci-new.yml
@@ -21,5 +21,5 @@ jobs:
       run: dotnet restore
     - name: Build the solution
       run: dotnet build --no-restore
-    - name: |Run all tests
+    - name: Run all tests
       run: dotnet test --no-build --verbosity normal
